--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -13,6 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StepCounterApp"
         tools:targetApi="31">
+        <service
+            android:name=".features.service.MeasurementService"
+            android:exported="false"
+            android:foregroundServiceType="health" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
