--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ appcompat = "1.7.0"
 room = "2.6.1"
 mpandroidchart = "3.1.0"
 glance = "1.1.1"
+datastore-preferences = "1.1.7"
 
 [libraries]
 glance-appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "glance"}
@@ -42,6 +43,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore-preferences" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
