--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ room = "2.6.1"
 mpandroidchart = "3.1.0"
 glance = "1.1.1"
 datastore-preferences = "1.1.7"
+review = "2.0.2"
 
 [libraries]
 glance-appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "glance"}
@@ -44,6 +45,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore-preferences" }
+review = { group = "com.google.android.play", name = "review", version.ref = "review"}
+review-ktx = { group = "com.google.android.play", name = "review-ktx", version.ref = "review"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
